# cases

./: README.md  agricultural_pricing.html  core.html  index.html  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
_proc/: agricultural_pricing.ipynb  index.ipynb  nbdev.yml  sidebar.yml
_proc/_docs/: agricultural_pricing.html  core.html  search.json  sitemap.xml
_proc/_docs/efficiency_analysis/: efficiency_analysis.html
_proc/drone_network/: drone_network.ipynb
_proc/economic_planning/: economic_planning.ipynb
_proc/efficiency_analysis/: efficiency_analysis.ipynb
cases/: _modidx.py
drone_network/: drone_network.html
economic_planning/: economic_planning.html
nbs/: agricultural_pricing.ipynb  index.ipynb
nbs/economic_planning/: DynamicModel.lp  economic_planning.ipynb
nbs/efficiency_analysis/: efficiency_analysis.ipynb
