[tool.poetry]
name = "cases"
version = "0.1.0"
description = ""
authors = ["scmopt <kubomikio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
nbdev = "^2.3.12"
jupyterlab = "3.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
